// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as an anchor with custom prop 1`] = `
<DocumentFragment>
  <ds-button
    href="/example"
    target="_blank"
    type="submit"
  >
    <a
      class="ds-c-button"
      href="/example"
      parent="[object HTMLElement]"
      target="_blank"
    >
      Foo
    </a>
  </ds-button>
</DocumentFragment>
`;

exports[`Button renders as button 1`] = `
<DocumentFragment>
  <ds-button>
    <button
      class="ds-c-button"
      parent="[object HTMLElement]"
      type="button"
    >
      Foo
    </button>
  </ds-button>
</DocumentFragment>
`;

exports[`Button renders disabled anchor correctly 1`] = `
<DocumentFragment>
  <ds-button
    disabled="true"
    href="#!"
  >
    <a
      aria-disabled="true"
      class="ds-c-button"
      parent="[object HTMLElement]"
      role="link"
    >
      Link button
    </a>
  </ds-button>
</DocumentFragment>
`;

exports[`Button renders disabled button 1`] = `
<DocumentFragment>
  <ds-button
    disabled="true"
  >
    <button
      class="ds-c-button"
      disabled=""
      parent="[object HTMLElement]"
      type="button"
    >
      Foo
    </button>
  </ds-button>
</DocumentFragment>
`;
